<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="10dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
       >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"

        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:gravity="center"
            android:background="@color/orange_theme"

           >
            <TextView
                android:id="@+id/day_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/default_day"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/month_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/default_month"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/title"
                    style="bold"
                    android:textSize="16sp"
                    android:textColor="@color/orange_theme"
                    />

                <TextView
                    android:id="@+id/eventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:text="@string/dafault_title"
                    android:textColor="@color/black"
                    style="bold"
                    android:textSize="16sp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/description_label"
                    style="bold"
                    android:textSize="16sp"
                    android:textColor="@color/orange_theme"
                    />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:text="@string/default_des"
                    style="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/date_label"
                    style="bold"
                    android:textSize="16sp"
                    android:textColor="@color/orange_theme"
                    />

                <TextView
                    android:id="@+id/eventDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:text="@string/default_date"
                    android:textColor="@color/black"
                    style="bold"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/eventTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:text="@string/default_time"
                    android:textColor="@color/black"
                    style="bold"
                    android:textSize="16sp"
                    />
            </LinearLayout>

        </LinearLayout>





    </LinearLayout>

</androidx.cardview.widget.CardView>
